# gomoku2d

./: .firebaserc  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  firebase.json  firestore.indexes.json  firestore.rules
.github/: dependabot.yml  pull_request_template.md
ProjectSettings/: ProjectSettings.asset  QualitySettings.asset  TagManager.asset
assets/: manifest.md
docs/: README.md  app_design.md  architecture.md  backend.md  backend_cost.md  backend_infra.md  bot_baseline.md  corridor_search.md  data_model.md  design.md  fe_architecture_options.md  fe_gap_analysis.md  game-framework.md  game_analysis.md  game_visual.md  gomoku.md  lethal_threats.md  online_backend_design.md  performance_tuning.md  product.md  progress.md  project.md  release.md  renju_corpus.md  renju_rules.md  roadmap.md  search_bot.md  tactical_scenarios.md  tactical_shapes.md  tech_debt.md  testing.md  tournament.md  ui_design.md  ui_screenshot_review.md  visual_design.md  (+2 more)
gomoku-bot-lab/gomoku-bot/: Cargo.toml
gomoku-bot-lab/gomoku-bot/benches/: pipeline_perf.rs  search_perf.rs
gomoku-bot-lab/gomoku-bot/src/: corridor.rs  frontier.rs  lab_spec.rs  lib.rs  pattern.rs  random.rs  search.rs  tactical.rs  viability.rs
gomoku-bot-lab/gomoku-bot/src/search/: candidates.rs  config.rs  corridor_proof.rs  engine.rs  evaluation.rs  metrics.rs  mod.rs  ordering.rs  safety.rs  state.rs  tests.rs  threat_view.rs  timing.rs
gomoku-bot-lab/gomoku-bot/src/tactical/: metrics.rs  mod.rs  policies.rs  scan.rs  shapes.rs  tests.rs  threats.rs
gomoku-bot-lab/gomoku-eval/: Cargo.toml
gomoku-bot-lab/gomoku-eval/src/: analysis.rs  analysis_batch.rs  analysis_fixture.rs  analysis_report.rs  arena.rs  bot_label.rs  budget.rs  cli.rs  elo.rs  html.rs  lethal_scenario.rs  lib.rs  main.rs  opening.rs  renju_rules.rs  report.rs  report_board.rs  scenario.rs  scenario_cli.rs  seed.rs  tournament.rs
gomoku-bot-lab/gomoku-eval/src/analysis_batch/: mod.rs  proof_frames.rs  published.rs  runner.rs  tests.rs  types.rs
gomoku-bot-lab/gomoku-eval/src/cli/: analysis.rs  options.rs  output.rs  tests.rs  tournament.rs
gomoku-bot-lab/gomoku-eval/src/report/: aggregate.rs  mod.rs  provenance.rs  tests.rs
gomoku-bot-lab/gomoku-wasm/: Cargo.toml
gomoku-bot-lab/gomoku-wasm/src/: lib.rs
(+368 files in other folders)
