[package]
name = "gomoku-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
gomoku-core = { path = "../gomoku-core" }
rand = "0.10"
serde_json = "1"
instant = { version = "0.1", features = ["wasm-bindgen"] }
libc = "0.2"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "search_perf"
harness = false

[[bench]]
name = "pipeline_perf"
harness = false
