[package]
name = "gomoku-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
gomoku-core = { path = "../gomoku-core" }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
web-time = "1.1"

[dev-dependencies]
criterion = "0.8"
gomoku-lab-support = { path = "../gomoku-lab-support" }

[[bench]]
name = "search_perf"
harness = false

[[bench]]
name = "pipeline_perf"
harness = false
