[package]
name = "gomoku-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
gomoku-core = { path = "../gomoku-core" }
gomoku-bot = { path = "../gomoku-bot" }
gomoku-analysis = { path = "../gomoku-analysis" }
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
